[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_tools"
version = "1.2.0"
description = "A tool collection for MCP"
authors = [
    { name = "Alexander Kaschta" },
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["mcp"]
license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = ["requests", "inquirer"]

[tool.setuptools.packages.find]
include = ["mcp_tools*"]